header alignment fixing

--- a/homework5/styles.css
+++ b/homework5/styles.css
@@ -28,6 +28,7 @@ a {
     width: 80%;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 .header__image{
